tests/should_fail/bad_expression.jou
def main() -> int:
    return int  # Error: expected an integer (the only expression that currently exists), got a variable name 'int'
